--- a/src/main/resources/fxml/Dado.fxml
+++ b/src/main/resources/fxml/Dado.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DadoController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DadoController">
    <children>
-      <JFXButton fx:id="btRolar" layoutX="70.0" layoutY="315.0" onAction="#btRolar" prefHeight="44.0" prefWidth="460.0" style="-fx-background-color: GREY;" text="Rolar">
+      <JFXButton fx:id="btRolar" layoutX="70.0" layoutY="315.0" onAction="#btRolar" prefHeight="44.0" prefWidth="460.0" style="-fx-border-color: black;" text="Rolar">
          <font>
             <Font name="Garamond" size="28.0" />
          </font>
@@ -19,10 +19,15 @@
             <Image url="@../Image/dado20.png" />
          </image>
       </ImageView>
-      <Label fx:id="resultadodado" layoutX="257.0" layoutY="90.0" prefHeight="107.0" prefWidth="97.0">
+      <Label fx:id="resultadodado" layoutX="257.0" layoutY="90.0" prefHeight="107.0" prefWidth="97.0" textFill="WHITE">
          <font>
             <Font size="73.0" />
          </font>
       </Label>
+      <JFXButton layoutX="494.0" layoutY="31.0" onAction="#btsair" prefHeight="54.0" prefWidth="92.0" style="-fx-border-color: black;" text="Sair">
+         <font>
+            <Font name="Garamond" size="28.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
